<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            android:id="@+id/blue_light_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/blue_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textTitle"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/blue_light_filter"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/filter_button"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Start Filter"
                    android:textAllCaps="false"

                    android:textSize="17sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/eye_strain_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/blue_light_container"
            android:layout_marginBottom="84dp"
            android:layout_marginTop="14dp"
            app:cardCornerRadius="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/digital_eye_strain_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/content2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textTitle2"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/digital_eye_strain"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/eye_button"
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/content2"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="Start Monitoring"
                    android:textAllCaps="false"
                    android:textSize="17sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>